# temporal-tensor-benchmark

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/literatuur/: README.md  tijdlijn.md
docs/literatuur/overzichten/: overzicht_feature_dimensie_3d_temporele_tensordata_mixed_types.md  overzicht_synthetische_tijdreeksgeneratie_benchmarking.md  overzicht_transformer_architecturen_tijdreeksen.md  overzicht_transformers_3d_temporele_tensordata.md  overzicht_transformers_event_sequenties_classificatie.md
docs/literatuur/papers/: bagnall_2018_uea_multivariate.md  bandt_2002_permutation_entropy.md  choi_2016_retain.md  dau_2019_ucr_archive.md  devlin_2019_bert.md  dosovitskiy_2020_vision_transformer.md  gorishniy_2021_ft_transformer.md  gorishniy_2022_numerical_embeddings.md  huang_2020_tabtransformer.md  ismail_fawaz_2019_dl_tsc_review.md  kang_2020_gratis.md  lee_2026_star_set_transformer.md  li_2019_logsparse_transformer_time_series.md  li_2020_behrt.md  lin_2020_doppelganger.md  liu_2018_heterogeneous_temporal_events.md  luetto_2023_unittab.md  min_2021_explainable_fraud_clustering.md  nie_2022_patchtst.md  nie_2023_patchtst.md  pang_2021_cehr_bert.md  shchur_2021_neural_tpp_review.md  shukla_2021_mtan.md  somepalli_2021_saint.md  tan_2025_syntsbench.md  tipirneni_2022_strats.md  vallarino_2025_hybrid_fraud_detection.md  vaswani_2017_attention_is_all_you_need.md  wang_2020_mimic_extract.md  wu_2020_deep_transformer_influenza.md  (+12 more)
tests/: test_generator.py  test_placeholder.py  test_trends.py
(+3 files in other folders)
