[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temporal-tensor-benchmark"
version = "0.1.0"
description = "Benchmark framework: transformers op 3D temporele tensordata"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
